# cg-course-2019

./: .gitignore  CMakeLists.txt  LiteMath.h  README.md  ShaderProgram.h  glad.c  main.cpp  readme.txt
RayMarching/: ShaderProgram.cpp  common.h
RayMarching/shaders/: fragment.glsl
RayMarching/skybox/mp_hexagon/: mp_hexagon.shader
SpaceObjects/: BBox.h  CMakeLists.txt  Camera.h  Font.cpp  Font.h  Material.h  Model.cpp  Model.h  ModelFactories.cpp  ModelFactories.h  Object.cpp  Object.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  readme.txt
SpaceObjects/models/Luke_Skywalkers_landspeeder/: Luke Skywalkers landspeeder.3ds  Luke Skywalkers landspeeder.mtl
SpaceObjects/shaders/: classic_fragment.glsl  fragment.glsl  particles_active_fragment.glsl  particles_active_geometry.glsl  particles_passive_fragment.glsl  particles_passive_vertex.glsl  vertex.glsl
shaders/: fragment.glsl  raytrace.glsl
